Fixup detail spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -406,6 +406,8 @@ details.lollipop[open] > summary {
   margin-left: 0.625em;
   border-left: solid 2px;
   padding-left: 10px;
+  margin-top: -10px;
+  margin-bottom: 10px;
 }
 
 @keyframes details-show {
